FIX: the nav menu because only works on android and Windows (Chrome/Firefox) but not on IOS (Iphone, Safari), and the responsive menu its necessary for the correct funcionality for the new site

--- a/src/style.css
+++ b/src/style.css
@@ -105,62 +105,133 @@ h1:has(+ h2) {
     opacity: 1;
 }
 
-/* The navigation menu */
-/* .navbar {
-    overflow: hidden;
+/* #region CSS NAVBAR */
+/* START: MENU NAVIGATION */
+/* Add a black background color to the top navigation */
+/* .topnav {
     background-color: #333;
-}
+    overflow: hidden;
+} */
 
-.navbar a {
+/* Style the links inside the navigation bar */
+/* .topnav a {
     float: left;
-    font-size: 16px;
-    color: white;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
+    font-size: 17px;
+} */
 
-.subnav {
+/* Add an active class to highlight the current page */
+/* .active {
+    background-color: #04AA6D;
+    color: white;
+} */
+
+/* Hide the link that should open and close the topnav on small screens */
+/* .topnav .icon {
+    display: none;
+} */
+
+/* Dropdown container - needed to position the dropdown content */
+/* .dropdown {
     float: left;
     overflow: hidden;
-}
+    background-color: #d3d3d3;
+} */
 
-.subnav .subnavbtn {
-    font-size: 16px;
+/* Style the dropdown button to fit inside the topnav */
+/* .dropdown .dropbtn {
+    font-size: 17px;
     border: none;
     outline: none;
-    color: white;
+    color: #555;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-}
+} */
 
-.navbar a:hover,
-.subnav:hover .subnavbtn {
-    background-color: red;
-}
-
-.subnav-content {
+/* Style the dropdown content (hidden by default) */
+/* .dropdown-content {
     display: none;
     position: absolute;
-    left: 0;
-    background-color: red;
-    width: 100%;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-}
+} */
 
-.subnav-content a {
-    float: left;
-    color: white;
-    text-decoration: none;
-}
-
-.subnav-content a:hover {
-    background-color: #eee;
+/* Style the links inside the dropdown */
+/* .dropdown-content a {
+    float: none;
     color: black;
-}
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+} */
 
-.subnav:hover .subnav-content {
+/* Add a dark background on topnav links and the dropdown button on hover */
+/* .topnav a:hover, */
+/* .dropdown:hover .dropbtn {
+    background-color: #aa4c4c;
+    color: #212122;
+    color: white;
+} */
+
+/* Add a grey background to dropdown links on hover */
+/* .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+} */
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+/* .dropdown:hover .dropdown-content {
     display: block;
 } */
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/* @media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+} */
+
+/* #endregion */
+
+/* .custom-nav {
+    float: right;
+} */
+
+.nav {
+    background-color: wheat;
+}
